--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
