--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.2.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.4",
+    "intersection-observer": "^0.7.0",
+    "ng-in-viewport": "^6.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
